# haleiki

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  odm.toml
assets/mockups/: 01-initial-design.html  02-literata.html  03-newsreader.html  04-newsreader-instrument-sans.html  05-newsreader-plus-jakarta-sans.html  06-newsreader-source-sans-3.html  07-newsreader-red-hat-display.html  08-footer.html  09-brand-guidelines.html  10-home-page.html  11-category-page.html  12-browse-page.html  13-concept-page.html  14-attribution-page.html  15-search-page.html  16-news-front-page.html  17-news-post.html  18-news-archive.html  19-news-tags.html  20-news-categories.html  21-trust-bar-prototype.html  index.html
content/: taxonomy.yaml
demo/: manifest.yaml  taxonomy.yaml
demo/.staging/: abstract-algebra.md  abstract-algebra.meta.json  ads-cft-correspondence.md  ads-cft-correspondence.meta.json  algebraic-structure.md  algebraic-structure.meta.json  amanda-askell.md  amanda-askell.meta.json  artificial-consciousness.md  artificial-consciousness.meta.json  artificial-intelligence.md  artificial-intelligence.meta.json  arvo-part.md  arvo-part.meta.json  avestan.md  avestan.meta.json  category-theory.md  category-theory.meta.json  chagdud-tulku-rinpoche.md  chagdud-tulku-rinpoche.meta.json  chogyam-trungpa.md  chogyam-trungpa.meta.json  classical-tibetan.md  classical-tibetan.meta.json  claude-debussy.md  claude-debussy.meta.json  claude-language-model.md  claude-language-model.meta.json  cognitive-science.md  cognitive-science.meta.json  cool-jazz.md  cool-jazz.meta.json  dartmouth-workshop.md  dartmouth-workshop.meta.json  david-lewin.md  david-lewin.meta.json  dilgo-khyentse.md  dilgo-khyentse.meta.json  dudjom-rinpoche.md  dudjom-rinpoche.meta.json  (+142 more)
demo/sources/: abstract-algebra.md  ads-cft-correspondence.md  algebraic-structure.md  amanda-askell.md  artificial-consciousness.md  artificial-intelligence.md  arvo-part.md  avestan.md  category-theory.md  chagdud-tulku-rinpoche.md  chogyam-trungpa.md  classical-tibetan.md  claude-debussy.md  claude-language-model.md  cognitive-science.md  cool-jazz.md  dartmouth-workshop.md  david-lewin.md  dilgo-khyentse.md  dudjom-rinpoche.md  dzogchen.md  earth.md  earths-crust.md  earths-inner-core.md  earths-internal-heat-budget.md  earths-outer-core.md  edicts-of-ashoka.md  edward-witten.md  erlang-language.md  eucalyptus.md  eye.md  flowering-plant.md  (+59 more)
src/: main.rs
tools/: Cargo.toml
tools/src/: cli.rs  error.rs  generator.rs  graph.rs  main.rs  merger.rs  parser.rs  search.rs  validator.rs
tools/src/demo/: clean.rs  convert.rs  fetch.rs  frontmatter.rs  manifest.rs  media.rs  mod.rs  rewrite.rs  status.rs
tools/tests/: demo_fetch.rs  demo_status.rs
(+27 files in other folders)
