[package]
name = "haleiki"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
description = "A wiki-like markdown- and git-powered tool for structured knowledge"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/oxur/haleiki"
homepage = "https://github.com/oxur/haleiki"
documentation = "https://docs.rs/haleiki"
readme = "README.md"
keywords = ["knowledge-base", "static-site", "wiki", "knowledge-graph", "documentation"]
categories = ["command-line-utilities", "text-processing", "web-programming"]
exclude = [
    "assets/",
    "docs/",
    "workbench/",
    "bin/",
    ".claude/",
    "CLAUDE.md",
    "Makefile",
    "odm.toml",
]

[[bin]]
name = "haleiki"
path = "src/main.rs"

[dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
